--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Shuffle youtube videos without youtube pausing the video",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://armagaren.github.io/yt-shuffler",
+  "dependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
